--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -22,7 +22,7 @@ The system can be written on continuous-time state-space form:
 \end{equation}
 
 with $x = \begin{bmatrix} \lambda & r & p & \dot{p} \end{bmatrix}^T$ and $u = p_c$.
-The continuous-time system matrices for this model is:
+The continuous-time system matrices for this model are:
 
 \begin{equation}
 	A_c = \begin{bmatrix} 0 & 1 & 0 & 0 \\ 0 & 0 & -K_2 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & -K_1K_{pp} & -K_1K_{pd} \end{bmatrix}
@@ -60,7 +60,7 @@ is obtained. A suitable approximation for the discrete-time matrices is then
 	B \approx hB_c
 \end{equation}
 
-These matrices are computed in Matlab, and are therefore not shown explicitly here.
+These matrices were computed in Matlab, and are therefore not shown explicitly here.
 
 
 \subsection{Computation of optimal trajectory}
@@ -78,7 +78,7 @@ for some scalar weight $q \geq 0$ over the finite horizon of states and inputs
 	z = (x_1 \; x_2 \; ... \; x_N \; u_1 \; u_2 \; ... \; u_N)^T
 \end{equation}
 
-This was done in Matlab using the function quadprog. The discrete-time system dynamics was implemented as equality constraints of the form $A_{\text{eq}}z = B_{\text{eq}}$, where $A_{\text{eq}}$ and $B_{\text{eq}}$ are given by the left- and right-hand side of the $N$ constraints
+This was done in Matlab using the function quadprog. The discrete system dynamics was implemented as equality constraints of the form $A_{\text{eq}}z = B_{\text{eq}}$, where $A_{\text{eq}}$ and $B_{\text{eq}}$ are given by the left- and right-hand side of the $N$ constraints
 
 \begin{align*}
 	x_1 - Bu_0        &= Ax_0 \\
@@ -107,9 +107,10 @@ for $t = 0...N-1$. Applying these constraints to all states and inputs in the so
 	\end{bmatrix}_{t=0..N-1}
 \end{equation}
 
-Which can be implemented as an inequality constraint of the form $A_{\text{iq}} z \leq B_{\text{iq}}$. Solving the optimization problem with different weights $q$ did not lead to any significant differences in the trajectory because the model inaccuracies made the helicopter drift away from the desired state anyway.
+Which can be implemented as an inequality constraint on the form $A_{\text{iq}} z \leq B_{\text{iq}}$. Solving the optimization problem with different weights $q$ did not lead to any significant differences in the trajectory because the model inaccuracies made the helicopter drift away from the desired state anyway.
 
-The objective function (\ref{eq:trajectory_cost}) weigths the input relative to the state deviations using the weigth parameter $q$. The term $(\lambda_i - \lambda_f)^2$ is the state deviations. They are squared to priotitize the largest deviations. Note that the cost function (\ref{eq:trajectory_cost}) does not take into consideration that $\lambda_i$ plus some multiple of $2\pi$ describes the same physical orientation of the helicopter. For example, if the reference is $0$ and $\lambda_i = 2\pi$, it will be regarded as a large error, even though the helicopter is infact in the desired orientation. A more optimal scheme would take this into consideration.
+The objective function (\ref{eq:trajectory_cost}) weights%er dette riktig ord for å vekte noe?
+ the input relative to the state deviations using the weight parameter $q$. The term $(\lambda_i - \lambda_f)^2$ is the state deviations. They are squared to priotitize the largest deviation. Note that the cost function (\ref{eq:trajectory_cost}) does not take into consideration that $\lambda_i$ plus some multiple of $2\pi$ describes the same physical orientation of the helicopter. For example, if the reference is $0$ and $\lambda_i = 2\pi$, it will be regarded as a large error, even though the helicopter is in fact in the desired orientation. A more optimal scheme would take this into consideration.
 
 
 \subsection{Final implementation}
