--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -1,4 +1,4 @@
-\section{Optimal Control of Pitch/Travel without Feedback}\label{sec:prob2}
+\section{Optimal Control of Pitch and Travel without Feedback}\label{sec:prob2}
 
 In this section an optimal trajectory $x^*$ and a corresponding input sequence $u^*$ was calculated. The trajectory should bring the helicopter from an initial state to another predefined state. No feedback was used to correct for deviations from the calculated trajectory. Also, elevation was disregarded, that is, $e=0$ was assumed for this part. The computation of the optimal trajectory was formulated as a discrete convex optimization problem.
 
