--- a/report/problem3.tex
+++ b/report/problem3.tex
@@ -1,4 +1,4 @@
-\section{Optimal Control of Pitch/Travel with Feedback (LQ)}\label{sec:prob3}
+\section{Optimal Control of Pitch and Travel with Feedback (LQ)}\label{sec:prob3}
 This problem involves implementing an LQ controller for optimal control with feedback. We will calculate a gain matrix K using the LQ controller, implement feedback on the helicopter, and look into if MPC is a good alternative to LQ.
 
 \subsection{Calculating the gain matrix K}
