--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -1,4 +1,4 @@
-\section{Optimal Control of Pitch/Travel and Elevation with and without Feedback}\label{sec:prob4}
+\section{Optimal Control of Pitch, Travel and Elevation with and without Feedback}\label{sec:prob4}
 In this section we extended our model to include the remaining states: elevation, $e$, and elevation
 rate, $\dot{e}$. We used a non-linear solver to compute an optimal trajectory in two dimensions,
 and additionally constrained the elevation to avoid a restriction shaped as a bell-curve.
