--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -12,7 +12,7 @@ These angles are measured by the encoders at each rotational joint. We can affec
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width = 0.55\textwidth]{figures/hardware_setup.eps}
+	\includegraphics[width = 0.6\textwidth]{figures/hardware_setup.eps}
 	\caption{The helicopter hardware setup}
 	\label{fig:hardware}
 \end{figure}
@@ -44,6 +44,7 @@ The resulting model has the advantage of being compatible with highly efficient 
 
 Second, the model incorporates a PID controller for the elevation, which is assumed to counteract the constant torque due to gravity, as well as a PD controller for the pitch. The result of this is that our goal in the optimization problem is to compute the setpoints, $e_c$ and $p_c$. Computing the appropriate voltages is left to the internal controllers.
 
+\newpage
 \begin{table}[ht]
     \centering
     \caption{Parameters and values}
@@ -86,11 +87,10 @@ Second, the model incorporates a PID controller for the elevation, which is assu
     $V_s$                  & Voltage sum, $V_f + V_b$ \\
     $K_{pp},K_{pd},K_{ep},K_{ei}, K_{ed}$ & Controller gains \\
     $T_g$                  & Moment needed to keep the helicopter flying \\
-    % $\lambda^*$
-    % $e_c^*$
+    $\lambda^*$        & Optimal travel trajectory \\
+    $p_c^*$               & Optimal pitch setpoint \\
+    $e_c^*$               & Optimal elevation setpoint \\
     \hline
     \end{tabular}
     \label{tab:variables}
-
-TODO: Variable notation for plots and stuff.
 \end{table}
