Tuned simulink model size

--- a/report/simulink.tex
+++ b/report/simulink.tex
@@ -1,33 +1,25 @@
 \section{Simulink Diagrams}\label{sec:simulink}
-This section should contain your Simulink diagrams.
-
-\subsection{A Simulink Diagram}
-
-\begin{figure}[htb]
+\begin{figure}[ht!]
 	\centering
- 	\includegraphics[width = \textwidth]{figures/day2/day2_mdl}
+ 	\includegraphics[width = 0.8\textwidth]{figures/day2/day2_mdl}
  	\caption{Simulink optimal open-loop model}
  	\label{fig:simulink_day2}
 \end{figure}
-
-\begin{figure}[htb]
+\begin{figure}[ht!]
 	\centering
- 	\includegraphics[width = \textwidth]{figures/day3/day3_mdl}
+ 	\includegraphics[width = 0.8\textwidth]{figures/day3/day3_mdl}
  	\caption{Simulink optimal closed-loop model}
  	\label{fig:simulink_day3}
 \end{figure}
-
-\begin{figure}[htb]
+\begin{figure}[ht!]
 	\centering
- 	\includegraphics[width = \textwidth]{figures/day4_cl/day4_cl_mdl}
+ 	\includegraphics[width = 0.8\textwidth]{figures/day4_cl/day4_cl_mdl}
  	\caption{Simulink optimal closed-loop model in two dimensions}
  	\label{fig:simulink_day4_cl}
 \end{figure}
-
-\begin{figure}[htb]
+\begin{figure}[ht!]
 	\centering
- 	\includegraphics[width = \textwidth]{figures/day4_ol/day4_ol_mdl}
+ 	\includegraphics[width = 0.8\textwidth]{figures/day4_ol/day4_ol_mdl}
  	\caption{Simulink optimal open-loop model in two dimensions}
  	\label{fig:simulink_day4_ol}
 \end{figure}
-
