Added matlab code in latex

--- a/report/matlab.tex
+++ b/report/matlab.tex
@@ -1,5 +1,16 @@
 \section{MATLAB Code}\label{sec:matlab}
-TODO: Se template
 
-\subsection{plot\_constraint.m}\label{sec:plot_constraint_m}
-\lstinputlisting{code/plot_constraint.m}
+\subsection{Day 2}\label{code:day2}
+\lstinputlisting{code/day2/day2.m}
+
+\newpage
+\subsection{Day 3}\label{code:day3}
+\lstinputlisting{code/day3/day3.m}
+
+\newpage
+\subsection{Day 4 open-loop}\label{code:day4_ol}
+\lstinputlisting{code/day4_openloop/day4_openloop.m}
+
+\newpage
+\subsection{Day 4 closed-loop}\label{code:day4_cl}
+\lstinputlisting{code/day4/day4.m}
