--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -5,15 +5,14 @@
 % - Check the word length and further reduce your words if necessary by cutting out unnecessary words or rewriting some of the sentences into a single, more succinct sentence.
 % - Edit for flow and expression.
 
-The purpose of the helicopter project in TTK4135 is to get experience combining optimization algorithm and control theory on a real world platform. The helicopter will be controlled by the optimal trajectory / input according to a linearized model, both in open-loop and closed-loop with a linear quadratic regulator. The project also gives an introduction to hardware-in-the-loop (HIL) and automatic generation of code using MatLab with QuaRC.
+The purpose of the helicopter project in TTK4135 is to get experience combining optimization algorithms and control theory on a real world platform. The helicopter will be controlled using an optimal trajectory computed from a linearized model, both in open-loop and closed-loop with a linear quadratic regulator. The project also gives an introduction to hardware-in-the-loop (HIL) and automatic generation of code using MATLAB and QuaRC.
 
-The main topics of this project is:
+The main topics of this project are:
 \begin{itemize}
-\item Brief introduction to the model of the helicopter and the assumptions done when linearizing it.
-\item Discretization of the model
-\item Optimal control with cost function and linear inequality constraints
- \item Applying linear quadratic regulator (LQR) to the optimal trajectory
- \item Optimal control in two dimensions with non-linear inequality constraints
+\item Formulating and discretizing a state-space model for the helicopter
+\item Optimal control with linear inequality constraints
+\item Applying linear quadratic regulator (LQR) to the optimal trajectory
+\item Optimal control in two dimensions with non-linear inequality constraints
 \end{itemize}
 
 
