--- a/report/matlab.tex
+++ b/report/matlab.tex
@@ -9,8 +9,8 @@
 
 \newpage
 \subsection{Day 4 open-loop}\label{code:day4_ol}
-\lstinputlisting[basicstyle=\footnotesize]{code/day4_openloop/day4_openloop.m}
+\lstinputlisting[basicstyle=\footnotesize, firstline=12]{code/day4_openloop/day4_openloop.m}
 
 \newpage
 \subsection{Day 4 closed-loop}\label{code:day4_cl}
-\lstinputlisting[basicstyle=\footnotesize]{code/day4/day4.m}
+\lstinputlisting[basicstyle=\footnotesize, firstline=12]{code/day4/day4.m}
