--- a/report/intro.tex
+++ b/report/intro.tex
@@ -17,9 +17,9 @@ weights the error between the measured state and the trajectory.
 It is possible to implement this using traditional PID regulators, or a linear-quadratic regulator
 However, while the optimal sequence of inputs may not be perfect in open-loop, the planned trajectory for the states are often quite useful, even if the model have errors. Here it is possible to implement a traditional PID regulator, or as we will be doing in this project, implement a linear quadratic regulator (LQR).
 
-The LQR can be both time variant and time invariant, dictated by the nature of the system. As mentioned in the linearizion part, the calculation of the LQR gain can and will be done by a computer, and will often be recalculated when re-linearizing. By tuning the LQR so that it prioritize to follow the trajectory of the states rather than following the optimal input, it is possible to compensate for modeling errors.
+The LQR can be both time variant and time invariant, dictated by the nature of the system. As mentioned in the linearization part, the calculation of the LQR gain can and will be done by a computer, and will often be recalculated when re-linearizing. By tuning the LQR so that it prioritize to follow the trajectory of the states rather than following the optimal input, it is possible to compensate for modeling errors.
 
 \subsection{Optimal control with non-linear constraints, and thoughts on MPC}
 When controlling two degrees of freedom with non-linear inequality constraints with optimization theory, the time it takes to solve the optimization problem is quite long. When calculating the trajectory once and then executing the whole horizon this does not become a problem.
 
-However when using MPC, which is to recalculate the horizon every time step and only use the first calculated input, this time becomes a problem. This calculation time can be improved by selecting a better solver, increase hardware specifications and do simplifications / linearizion. When achieving this on a low-power unit like a micro controller, FPGA, DSP or equivalent, a new world in control theory will open.
+However when using MPC, which is to recalculate the horizon every time step and only use the first calculated input, this time becomes a problem. This calculation time can be improved by selecting a better solver, increase hardware specifications and do simplifications / linearization. When achieving this on a low-power unit like a micro controller, FPGA, DSP or equivalent, a new world in control theory will open.
