Added text conclusion

--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,2 +1,2 @@
 \section{Conclusion}\label{sec:conclusion}
-TODO: Se template
+Our results and discussion clearly points towards MPC as the most useful way of controlling a plant such as the helicopter model. However, it it also the most expensive algorithm in terms of computational power needed, and therefore might be considered as overkill in many small systems or systems with lower requirements on optimality.
