Added more text conclusion

--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,2 +1,3 @@
 \section{Conclusion}\label{sec:conclusion}
-Our results and discussion clearly points towards MPC as the most useful way of controlling a plant such as the helicopter model. However, it it also the most expensive algorithm in terms of computational power needed, and therefore might be considered as overkill in many small systems or systems with lower requirements on optimality.
+Our results and discussion clearly points towards MPC as the seemingly best way of controlling a plant such as the helicopter model. It is necessary if the possibility to implement nonlinear constraints is needed. However, it is also the most expensive algorithm in terms of computational power needed, and therefore might be considered an overkill in many small systems or systems with lower requirements on optimality.
+An LQR is a lot simpler to implement than an MPC, and therefore also cheaper. In the simplest systems, some version of the PID-regulator alone might be more than sufficient. No matter the regulator type, this project proved to us the necessarity of feedback in a control system to correct for model inaccuracies and unsuspected impacts.
