--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -105,9 +105,9 @@ We solved the optimization problem using the built-in MATLAB function \texttt{qu
     \label{fig:day2_mdl}
 \end{figure}
 
-Figure (\ref{fig:day2_plot}) shows the measured system trajectory for $q = 1$. We see that the helicopter did not reach the planned final state, even though the pitch matched fairly well with the optimal setpoint. Selecting different weights $q$ did not lead to any significant improvements.
+Figure (\ref{fig:day2_plot}) shows the measured trajectories for travel and pitch, using $q = 1$. We see that the helicopter did not reach the planned final state, even though the pitch matched fairly well with the optimal setpoint. Selecting different values of $q$ did not lead to any significant improvements, and the helicopter still deviated heavily from the planned trajectory.
 
-The biggest cause for this is the lack of feedback. Modelling inaccuracies, disturbances, and linearization errors all contribute to
+The biggest cause for this is the lack of feedback. Modelling inaccuracies, disturbances, and linearization errors all contribute to the computed input being unfit for the real system. Since constructing a perfect model is unrealistic, feedback is necessary compensate for such errors.
 
 \begin{figure}[htb]
     \centering
@@ -115,5 +115,3 @@ The biggest cause for this is the lack of feedback. Modelling inaccuracies, dist
     \caption{Plot of day 2}
     \label{fig:day2_plot}
 \end{figure}
-
-The deviation was caused by an imperfect model. A perfect model is  unrealistic to construct, and without feedback, the model inaccuracies will lead to nonoptimal results in the real world. For example, the pitch-regulator in our model is fast enough to follow its input perfectly, and we are using a linear model that clearly does not correspond perfectly to the real helicopter.
