--- a/report/problem3.tex
+++ b/report/problem3.tex
@@ -25,7 +25,7 @@ By keeping R constant at unity weight and tuning Q, we saw that by weighting tra
 	\centering
     	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{figures/day3/plot_day3_allQ}}
 	\caption{Plot of day 3 with differently tuned Q}
-	\label{fig:day3_allQ}
+	\label{fig:day3_plot_allQ}
 \end{figure}
 
 
