--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -96,22 +96,15 @@ Note that the cost function does not take into consideration that $\lambda_i$ pl
 
 \subsection{Results}
 
-We solved the optimization problem using the built-in MATLAB function \texttt{quadprog}. The result was a simulated state trajectory, and the corresponding optimal input sequence. We fed the input sequence directly into the internal regulators, as shown in figure (\ref{fig:day2_mdl}). Zeroes were added on both sides of the input sequence to give time to initialize and stabilize the helicopter.
+We solved the optimization problem using the built-in MATLAB function \texttt{quadprog}, over a horizon of length $N=100$ or $25$ seconds. We appended $5$ seconds of zeroes on both sides of the resulting optimal input sequence, to give the system time to stabilize at the initial state. The input sequence was fed into the internal regulators as setpoints, as shown in figure (\ref{fig:simulink_day2}).
 
 \begin{figure}[htb]
     \centering
-        \makebox[\textwidth][c]{\includegraphics[width=\textwidth]{figures/day2/day2_mdl}}
-    \caption{Plot of day 2}
-    \label{fig:day2_mdl}
+        \includegraphics{figures/day2/plot_day2}
+    \caption{Comparison of optimal and measured trajectories for $q = 1$.}
+    \label{fig:day2_plot}
 \end{figure}
 
 Figure (\ref{fig:day2_plot}) shows the measured trajectories for travel and pitch, using $q = 1$. We see that the helicopter did not reach the planned final state, even though the pitch matched fairly well with the optimal setpoint. Selecting different values of $q$ did not lead to any significant improvements, and the helicopter still deviated heavily from the planned trajectory.
 
-The biggest cause for this is the lack of feedback. Modelling inaccuracies, disturbances, and linearization errors all contribute to the computed input being unfit for the real system. Since constructing a perfect model is unrealistic, feedback is necessary compensate for such errors.
-
-\begin{figure}[htb]
-    \centering
-        \makebox[\textwidth][c]{\includegraphics[width=\textwidth]{figures/day2/plot_day2}}
-    \caption{Plot of day 2}
-    \label{fig:day2_plot}
-\end{figure}
+The biggest cause for this is the lack of feedback. Modelling inaccuracies, disturbances, and linearization errors all contribute to the computed input being unfit for the real system. Since constructing a perfect model is unrealistic, feedback will be necessary compensate for such errors.
